# soundwave

./: .gitignore  LICENSE  README.md
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: README.md  tauri.conf.json
apps/desktop/src/components/: README.md
apps/desktop/src/components/cards/: HealthCard.tsx
apps/desktop/src/hooks/: README.md  useHealthCheck.ts
apps/desktop/src/lib/: README.md  errors.ts
apps/desktop/src/lib/api/: health.ts
apps/desktop/src/pages/: README.md
docs/: README.md
scripts/: README.md  dev.bat  launch.bat
scripts/dev/: start-backend.bat
services/audio-engine/: README.md  pyproject.toml
services/audio-engine/src/audio_engine/: __init__.py  main.py
services/audio-engine/src/audio_engine/api/: __init__.py
services/audio-engine/src/audio_engine/core/: __init__.py
services/audio-engine/src/audio_engine/data/: __init__.py
services/audio-engine/src/soundwave_audio_engine.egg-info/: PKG-INFO  SOURCES.txt
